added get users events
